Migrate to Stonecutter multi-version build system + fix deprecations\n\n- Add Stonecutter support for Minecraft 1.21.1 and 1.21.11\n- Replace deprecated Runtime.exec(String) with ProcessBuilder\n- Fix Gradle 10 compatibility by capturing project properties at config time\n- Add compiler deprecation warnings flag\n- Update README with multi-version build instructions